# ShakEngine

./: .gitignore  CMakeLists.txt  README.md  StripTrailExample.h  TextureAtlasExample.h  todo.md
.github/workflows/: ci.yml
assets/animations/: explosion.atlas
assets/json/ships/: DPS.json
assets/shaders/: heal.fs  healthbar.fs  laserShot.fs  logo.fs  particle.fs  particle.gs  particle.vs  rainbowRay.fs  rocket.fs  scanner.fs  test.fs
assets/textures/Cyborg Nobilis/Cyborg Nobilis/: ship106.atlas
assets/textures/Vengeance_Lighting_Frost/: ship80.atlas
assets/textures/ship93/: ship93.atlas
engine/include/: Animation.h  Background.h  Camera.h  Component.h  EngineDefines.h  GameObject.h  GameObjectPool.h  JSON.h  MathExtensions.h  Particle.h  ParticleSystem.h  QuadTree.h  Renderer.h  ResourceManager.h  Scene.h  SceneManager.h  ShaderDevHelper.h  ShakEngine.h  ShakEvent.h  ShakSprite.h  Spline.h  Sprite.h  TextureAtlas.h  TrailRenderer.h  UIElement.h  UIManager.h
engine/include/shapes/: Circle.h  Square.h
engine/src/: Animation.cpp  Background.cpp  Component.cpp  GameObject.cpp  ParticleSystem.cpp  Renderer.cpp  ResourceManager.cpp  Scene.cpp  ShakEngine.cpp  Spline.cpp  TextureAtlas.cpp  TrailRenderer.cpp
game/: Alien.cpp  Alien.h  DamageNumber.h  Game.cpp  LaserShot.cpp  LaserShot.h  Missle.h  Player.cpp  Player.h  PlayerObj.h  Rocket.cpp  Rocket.h  Ship.cpp  Ship.h  TestGO.h  TestRotate.h
game/UI/: HUD.h
game/components/: AIController.cpp  AIController.h  AbilitySystem.cpp  AbilitySystem.h  BuffList.cpp  BuffList.h  Energy.cpp  Energy.h  EnergyBar.cpp  EnergyBar.h  Health.cpp  Health.h  HealthBar.cpp  HealthBar.h  PlayerController.cpp  PlayerController.h  TestComp.h
game/components/abilities/: Ability.cpp  Ability.h  CritRocket.cpp  CritRocket.h  LaserDPS.cpp  LaserDPS.h  LifeDrain.cpp  LifeDrain.h  MachineGun.cpp  MachineGun.h  TestAbility.h
game/scenes/: TestGameScene.h  TestGameScene2.h
include/: Animation.h  Background.h  Camera.h  Component.h  EngineDefines.h  GameObject.h  GameObjectPool.h  JSON.h  Particle.h  ParticleLogic.h  ParticleSystem.h  QuadTree.h  RectCollider.h  Renderer.h  ResourceManager.h  Scene.h  SceneManager.h  ShaderDevHelper.h  ShakEngine.h  ShakEvent.h  ShakRenderSprite.h  Spline.h  TextureAtlas.h  Trail.h  UIElement.h  UIManager.h  glCheck.h
include/ShakUI/: Logger_UI.h  PerformanceInfo_UI.h
include/defaultScenes/: EngineLogoSplash.h
include/shapes/: Circle.h  Line.h  Square.h
scripts/: GenerateNewProject.bat
shaders/: test.fs
src/: Animation.cpp  Camera.h  DamageNumber.h  EngineDefines.h  Game.cpp  GameObject.cpp  GameObject.h  LineTrailExample.h  Logger_UI.cpp  ParticleSystem.cpp  Player.cpp  Player.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  ShakEngine.cpp  ShakEngine.h  Spline.cpp  StripTrailExample.h  TextureAtlas.cpp  Trail.cpp  TrailRenderer.cpp  dllmain.cpp  main.cpp
tests/: CMakeLists.txt  PerformanceTestScene.h  PerformanceTestUI.h  TestScene.h  performance_test.cpp  test_main.cpp  test_splash.cpp
tests/shadertest/: test.fs
textures/New_Goliath_plus/: ship106.atlas
